# UBB

./: README.md
Semestrul 1/ASC/: README.md
Semestrul 1/ASC/PRACTIC/: cerinta.txt  cuvinte2.txt  main.asm
Semestrul 1/ASC/lab 11/: main.asm  modul.asm
Semestrul 1/ASC/lab 12/: main.c  modul.asm
Semestrul 1/ASC/lab 2/: ex 1.asm  ex 2.asm  ex 3.asm  ex 4.asm  ex 5.asm  ex 6.asm
Semestrul 1/ASC/lab 3/: ex 1.asm  ex 2.asm  ex 3 signed.asm  ex 3 unsigned.asm
Semestrul 1/ASC/lab 4/: ex 1.asm  ex 2.asm  ex 3.asm
Semestrul 1/ASC/lab 5/: ex 1.asm  ex 2.asm
Semestrul 1/ASC/lab 6/: ex 1 cu.asm  ex 1 fara.asm
Semestrul 1/ASC/lab 8/: ex 1.asm  ex2.asm
Semestrul 1/FP/: README.md
Semestrul 1/FP/Practic/: main.py  tests.py  ui.py  uierfui.txt
Semestrul 1/FP/lab 13/: iterativ.py  recursiv.py
Semestrul 1/FP/lab 2/: pr 1.py  pr 10.py  pr 12.py  pr 4.py  pr 8.py
Semestrul 1/FP/lab 3/: lab2.py
Semestrul 1/FP/lab 4-6/: main.py
Semestrul 2/OOP/: .gitignore  README.md
Semestrul 2/SDA/: .gitignore  README.md
Semestrul 2/SDA/lab 1/: App.cpp  CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  pseudocod
Semestrul 2/SDA/lab 4/: App.cpp  CMakeLists.txt  IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h  pseudocod.txt
Semestrul 2/SDA/lab 7/: AB.cpp  AB.h  App.cpp  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h  Node.h  pseudocod.txt
Semestrul 3/CN/: README.md
Semestrul 3/DB/: README.md
Semestrul 3/MAP/: README.md
Semestrul 3/PLF/: README.md
Semestrul 4/AI/: README.md
Semestrul 4/SDI/: README.md
Semestrul 4/WEB/: README.md
(+783 files in other folders)
